# smb-rs

./: CLAUDE.md  Cargo.toml  README.md
crates/smb/: Cargo.toml
crates/smb-msg/src/: create.rs  file.rs  oplock.rs
crates/smb-rpc/: Cargo.toml
crates/smb-rpc/src/: interface.rs
crates/smb-rpc/src/interface/: base.rs  lsarpc.rs  srvsvc.rs
crates/smb-transport/: Cargo.toml
crates/smb-transport/src/: iovec.rs  lib.rs  traits.rs  utils.rs
crates/smb-transport/src/netbios/: transport.rs
crates/smb-transport/src/quic/: transport.rs
crates/smb-transport/src/rdma/: transport.rs
crates/smb-transport/src/tcp/: transport.rs
crates/smb/docs/: index.md
crates/smb/src/: compression.rs  connection.rs  crypto.rs  dialects.rs  docs.rs  error.rs  lease.rs  lib.rs  msg_handler.rs  resource.rs  session.rs  sync_helpers.rs  tree.rs
crates/smb/src/client/: config.rs  smb_client.rs  unc_path.rs
crates/smb/src/connection/: actor.rs  config.rs  preauth_hash.rs  transformer.rs  worker.rs
crates/smb/src/connection/worker/: parallel.rs  single_worker.rs  worker_trait.rs
crates/smb/src/connection/worker/parallel/: async_backend.rs  backend_trait.rs  base.rs  threading_backend.rs
crates/smb/src/crypto/: encryption.rs  signing.rs
crates/smb/src/crypto/encryption/: encrypt_ccm.rs  encrypt_gcm.rs  impls.rs
crates/smb/src/resource/: directory.rs  file.rs  file_util.rs  pipe.rs
crates/smb/src/session/: authenticator.rs  channel.rs  encryptor_decryptor.rs  gss.rs  setup.rs  signer.rs  sspi_network_client.rs  state.rs
crates/smb/src/tree/: dfs_tree.rs  ipc_tree.rs
crates/smb/tests/: basic.rs  closes.rs  common.rs  conformance_anonymous.rs  conformance_smb302.rs  conformance_smoke.rs  conformance_windows_dc_ntlm.rs  dialects.rs  info_query.rs  lease.rs  long_dir.rs  multichannel.rs  notify.rs  rpc.rs
crates/smb/tests/conformance/: asserts.rs  mock_gss.rs  mock_transport.rs  mod.rs  transcripts.rs
smb-cli/: Cargo.toml
smb-cli/src/: cli.rs  copy.rs  info.rs  main.rs  security.rs  watch.rs
