[package]
name = "smb-cli"
description = "SMB Command Line Interface using `smb-rs`"
readme = "README.md"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smb = { workspace = true, features = ["std-fs-impls"] }

tokio = { workspace = true, features = ["rt-multi-thread"] }
futures-util = { workspace = true }
futures = { workspace = true }

# CLI & logging
indicatif = "0.18.0"
clap = { version = "4.5.27", features = ["derive"] }
ctrlc = { version = "3.5" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []

netbios-transport = []
quic = []
rdma = []

profiling = []
