[package]
name = "smb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
smb-msg = { workspace = true }
smb-dtyp = { workspace = true }
smb-rpc = { workspace = true }
smb-fscc = { workspace = true }
smb-transport = { workspace = true }

# Zero-copy buffers
bytes = { workspace = true }

# Encoding/Decoding
binrw = { workspace = true }
modular-bitfield = { workspace = true }

# Async
tokio = { workspace = true, features = ["time", "rt"] }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

# General utils
rand = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
pastey = { workspace = true }
# Stable keyed hash used to derive per-path lease keys from the client's
# random salt. std::DefaultHasher's algorithm is explicitly unstable
# across Rust versions, which would break lease-cache reuse across
# rustc upgrades for callers that pin lease_key_salt.
siphasher = "1"

url = "2.5.0"
byteorder = { version = "1.5.0", optional = true }

# APIs
sspi = { version = "0.18.0", features = ["ring"], default-features = false }
reqwest = { workspace = true, optional = true }

# Crypto; RustCrypto provides support for RC versions only.
hmac = "0.13.0-rc.2"
sha2 = "0.11.0-rc.2"
kbkdf = { version = "0.1.0-pre.0" }
crypto-common = { version = "0.2.0-rc.4" }
aes = "0.9.0-rc.1"
aes-gcm = { version = "0.11.0-rc.1", optional = true }
cmac = { version = "0.8.0-rc.1", optional = true }
ccm = { version = "0.6.0-pre.0", optional = true }
aead = { version = "0.6.0-rc.2", optional = true }

# Compression
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
], optional = true }

# Dev - Tests
[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
serial_test = "3.2"
temp-env = { version = "0.3.6", features = ["async_closure"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = ["sign", "encrypt", "compress", "std-fs-impls", "netbios-transport"]

# Compression
compress_pattern_v1 = []
compress_lz4 = ["dep:lz4_flex"]
compress = ["compress_pattern_v1", "compress_lz4"]

# Encryption
__encrypt_core = []
encrypt_aes128ccm = ["dep:ccm", "dep:aead", "__encrypt_core"]
encrypt_aes256ccm = ["dep:ccm", "dep:aead", "__encrypt_core"]
encrypt_aes128gcm = ["dep:aes-gcm", "dep:aead", "__encrypt_core"]
encrypt_aes256gcm = ["dep:aes-gcm", "dep:aead", "__encrypt_core"]
encrypt_aesccm = ["encrypt_aes128ccm", "encrypt_aes256ccm"]
encrypt_aesgcm = ["encrypt_aes128gcm", "encrypt_aes256gcm"]
encrypt = ["encrypt_aesccm", "encrypt_aesgcm"]

# Signing
sign_gmac = ["dep:aes-gcm"]
sign_cmac = ["dep:cmac"]
sign_hmac = []
sign = ["sign_gmac", "sign_cmac", "sign_hmac"]

# Transport
quic = ["smb-transport/quic"]
rdma = ["smb-transport/rdma"]
netbios-transport = ["smb-transport/netbios-transport"]

# Kerberos requires reqwest for HTTP transport, for kerberos
kerberos = ["reqwest", "dep:byteorder"]

# Implement traits for std::fs::File/tokio::fs::File
std-fs-impls = ["tokio/fs"]

# Estooric use cases
ksmbd-multichannel-compat = []

# Debugging
__debug-dump-keys = []

# Test-only API surface: exposes session-setup internals (GssState,
# authenticate_with_gss) and pulls in the smb-msg `server` feature so
# integration tests can construct server-direction frames (e.g. a
# scripted NegotiateResponse) via BinWrite. Never enable in production
# — the re-exported items are not subject to SemVer.
test-support = ["smb-msg/server"]

# Tests
test-multichannel = []
test-ndr64 = []
test-quic = []
test-rdma = []

[package.metadata.docs.rs]
features = ["sign", "encrypt", "compress", "kerberos", "quic"]
no-default-features = true
